Added images and started populating Adventure page

--- a/Products/Adventure.html
+++ b/Products/Adventure.html
@@ -35,5 +35,59 @@
                 <li><a href="Discounts\Science.html"><span>Science discount</span></a></li>
                 <li><a href="Discounts\Technology.html"><span>Tehnology discount</span></a></li>
             </ul>
-    </ul>	
+    </ul>
+</div>
+
+<div id='main' class="main body" >
+    <h1>Adventure</h1>
+    <div class="carousel active">
+        <ul>
+            <li class="vsep">
+                <a class="cover" href='#'>
+                    <img src = "../Pictures/the-nightingale.jpg">   
+                </a>
+                <div class="title">
+                    <div class="narrow">
+                        <a href="#" title="The Nightingale" style="width: 150px">The Nightinglae</a>
+                        "
+                                Kristin Hannah
+                        "
+                    </div>
+                </div>
+            </li>
+            <li class="vsep">
+                    <a class="cover" href='#'>
+                        <img src = "../Pictures/alice-s-adventures-in-wonderland.jpg">   
+                    </a>
+                    <div class="title">
+                        <div class="narrow">
+                            <a href="#" title="Alice's adventure in wonderland" style="width: 150px">Alice's adventure in wonderland</a>
+                            "
+                                    Lewis Carroll
+                            "
+                        </div>
+                    </div>
+            </li>
+
+            <li class="vsep">
+                    <a class="cover" href='#'>
+                        <img src = "../Pictures/all-quiet-on-the-western-front.jpg">   
+                    </a>
+                    <div class="title">
+                        <div class="narrow">
+                            <a href="#" title="All quiet on the western front" style="width: 150px">All quiet on the western front</a>
+                            "
+                                    Maria Remarque
+                            "
+                        </div>
+                    </div>
+                </li>
+            
+        </ul>
+    </div>
+
+
+</div>
+</body>
+</html>
     
