Changed Adventure.html and css for better outlook

--- a/Products/Adventure.html
+++ b/Products/Adventure.html
@@ -17,25 +17,30 @@
 	</form>
 </div>
 <div id='cssmenu'>
-    <ul>
-        <li class='active'><a href='../index.html'><span>Home</span></a></li>
-        <li class='prod'><a href='#'><span>Products</span></a></li>
-            <ul>
-            <li><a href='Fiction.html'><span>Fiction</span></a></li>
-            <li><a href="Adventure.html"><span>Adventure</span></a></li>
-            <li><a href="Children.html"><span>Children's books</span></a></li>
-            <li><a href="Science.html"><span>Science</span></a></li>
-            <li><a href="Technology.html"><span>Tehnology</span></a></li>
-            </ul>
-        <li class='disc>'><a href='Discounts\Discounts.html'><span>Discounts</span></a></li>
-            <ul>
-                <li><a href="Discounts\Fiction.html"><span>Fiction discount</span></a></li>
-                <li><a href="Discounts\Adventure.html"><span>Adventure discount</span></a></li>
-                <li><a href="Discounts\Children.html"><span>Children discount</span></a></li>
-                <li><a href="Discounts\Science.html"><span>Science discount</span></a></li>
-                <li><a href="Discounts\Technology.html"><span>Tehnology discount</span></a></li>
-            </ul>
-    </ul>
+        <div class="dropdown">
+                <button class='dropbtn'><a href='../index.html'>Home</a></button>
+        </div>        
+        <div class="dropdown">             
+            <button class='dropbtn'>Products</button>
+            <div class="dropdown-content">            
+                <a href='Fiction.html'>Fiction</a>
+                <a href="Adventure.html">Adventure</a>
+                <a href="Children.html">Children's books</a>
+                <a href="Science.html">Science</a>
+                <a href="Technology.html">Tehnology</a>            
+            </div>
+        </div>
+        <div class="dropdown">
+            <button class='dropbtn'>Discounts</button>
+            <div class="dropdown-content">                
+                <a href="Discounts\Fiction.html">Fiction discount</a>
+                <a href="Discounts\Adventure.html">Adventure discount</a>
+                <a href="Discounts\Children.html">Children discount</a>
+                <a href="Discounts\Science.html">Science discount</a>
+                <a href="Discounts\Technology.html">Tehnology discount</a>
+            </div>
+        </div>
+    
 </div>
 
 <div id='main' class="main body" >
@@ -49,9 +54,7 @@
                 <div class="title">
                     <div class="narrow">
                         <a href="#" title="The Nightingale" style="width: 150px">The Nightinglae</a>
-                        "
-                                Kristin Hannah
-                        "
+                        <p>Kristin Hannah</p>
                     </div>
                 </div>
             </li>
@@ -62,9 +65,7 @@
                     <div class="title">
                         <div class="narrow">
                             <a href="#" title="Alice's adventure in wonderland" style="width: 150px">Alice's adventure in wonderland</a>
-                            "
-                                    Lewis Carroll
-                            "
+                            <p>Lewis Carroll</p>                    
                         </div>
                     </div>
             </li>
@@ -76,9 +77,7 @@
                     <div class="title">
                         <div class="narrow">
                             <a href="#" title="All quiet on the western front" style="width: 150px">All quiet on the western front</a>
-                            "
-                                    Maria Remarque
-                            "
+                            <p>Maria Remarque</p>
                         </div>
                     </div>
             </li>
@@ -90,9 +89,7 @@
                 <div class="title">
                     <div class="narrow">
                         <a href="#" title="Anne of green gables" style="width: 150px">Anne of green gables</a>
-                        "
-                                Lucy Maud Montgomery
-                        "
+                        <p>Lucy Maud Montgomery</p>
                     </div>
                 </div>
             </li>
@@ -104,9 +101,7 @@
                 <div class="title">
                     <div class="narrow">
                         <a href="#" title="Gulliver's travels" style="width: 150px">Gulliver's travels</a>
-                        "
-                                Jonathan Swift
-                        "
+                        <p>Jonathan Swift</p>
                     </div>
                 </div>
              </li>
@@ -118,9 +113,7 @@
                 <div class="title">
                     <div class="narrow">
                         <a href="#" title="Kigdon of copper" style="width: 150px">Kingdon of copper</a>
-                        "
-                                S.A. Chakraborty
-                        "
+                        <p> S.A. Chakraborty</p>
                     </div>
                 </div>
             </li>
@@ -132,9 +125,7 @@
                 <div class="title">
                     <div class="narrow">
                         <a href="#" title="The secret garden" style="width: 150px">The secret garden</a>
-                        "
-                                Francess Burnett
-                        "
+                        <p>Francess Burnett</p>
                     </div>
                 </div>
             </li>
@@ -146,9 +137,7 @@
                 <div class="title">
                     <div class="narrow">
                         <a href="#" title="Twelfth night" style="width: 150px">Twelfth night</a>
-                        "
-                                William Shakespeare
-                        "
+                        <p>William Shakespeare</p>
                     </div>
                 </div>
             </li>
@@ -160,9 +149,7 @@
                 <div class="title">
                     <div class="narrow">
                         <a href="#" title="War of the wolf" style="width: 150px">War of the wolf</a>
-                        "
-                                Bernard Cornwell
-                        "
+                        <p>Bernard Cornwell</p>
                     </div>
                 </div>
             </li>
@@ -174,9 +161,7 @@
                 <div class="title">
                     <div class="narrow">
                         <a href="#" title="World without end" style="width: 150px">World without end</a>
-                        "
-                                Ken Follett
-                        "
+                        <p>Ken Follett</p>
                     </div>
                 </div>
             </li>
