Updated links to discount pages and css to format menu and logo

--- a/Index.html
+++ b/Index.html
@@ -2,13 +2,13 @@
 
 <head>
 	<title>The Book Store</title>
-    <link rel="stylesheet" href="styles_menu.css">
+    <link rel="stylesheet" href="../styles_menu.css">
     <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
     <!--<script src="script.js"></script>-->
 </head>
 <body>
 <div class="title">
-<img src ="pictures/booklogo.jpg"></img>
+<img src ="Pictures/Logo.png"></img>
 </div>
 <div class="search">
 	<form action="main.html/search.php">
