--- a/Products/Adventure.html
+++ b/Products/Adventure.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="title">
-<img src ="../Pictures/BookLogo.jpg"></img>
+<img src ="../Pictures/Logo.png"></img>
 <h1>Adventure books</h1>
 </div>
 <div class="search">
@@ -33,11 +33,11 @@
         <div class="dropdown">
             <button class='dropbtn'>Discounts</button>
             <div class="dropdown-content">                
-                <a href="Discounts\Fiction.html">Fiction discount</a>
-                <a href="Discounts\Adventure.html">Adventure discount</a>
-                <a href="Discounts\Children.html">Children discount</a>
-                <a href="Discounts\Science.html">Science discount</a>
-                <a href="Discounts\Technology.html">Tehnology discount</a>
+                <a href="../Discounts/Fiction.html">Fiction discount</a>
+                <a href="../Discounts/Adventure.html">Adventure discount</a>
+                <a href="../Discounts/Children.html">Children discount</a>
+                <a href="../Discounts/Science.html">Science discount</a>
+                <a href="../Discounts/Technology.html">Tehnology discount</a>
             </div>
         </div>
     
