--- a/Products/Children.html
+++ b/Products/Children.html
@@ -43,4 +43,111 @@
 
 </div>
 
+
+<div id='main' class="main body" >
+<h1>Children</h1>
+<div class="carousel active">
+    <ul>
+        <li class="vsep">
+            <a class="cover" href='#'>
+                <img src = "../Pictures/Children/five-feet-apart.jpg">   
+            </a>
+            <div class="title">
+                <div class="narrow">
+                    <a href="#" title="Five feet apart" style="width: 150px">Five feet apart</a>
+                    <p>Rachael Lippincott</p>
+                </div>
+            </div>
+        </li>
+        <li class="vsep">
+                <a class="cover" href='#'>
+                    <img src = "../Pictures/Children/gravity-falls-journal-3.jpg">   
+                </a>
+                <div class="title">
+                    <div class="narrow">
+                        <a href="#" title="Gravity falls journal 3" style="width: 150px">Gravity falls journal 3</a>
+                        <p>Alex Hirsch</p>                    
+                    </div>
+                </div>
+        </li>
+
+        <li class="vsep">
+                <a class="cover" href='#'>
+                    <img src = "../Pictures/Children/harry-potter-box-set-the-complete-collection-children-s-paperback.jpg">   
+                </a>
+                <div class="title">
+                    <div class="narrow">
+                        <a href="#" title="Harry potter box set the complete collection" style="width: 150px">Harry potter box set the complete collection</a>
+                        <p>J.K Rowling</p>
+                    </div>
+                </div>
+        </li>
+
+        <li class="vsep">
+            <a class="cover" href='#'>
+                <img src = "../Pictures/Children/man-s-search-for-meaning.jpg">   
+            </a>
+            <div class="title">
+                <div class="narrow">
+                    <a href="#" title="Man's search for meaning " style="width: 150px">Man's search for meaning</a>
+                    <p>Viktor E. Frankl</p>
+                </div>
+            </div>
+        </li>
+
+        <li class="vsep">
+            <a class="cover" href='#'>
+                <img src = "../Pictures/Children/queen-of-air-and-darkness.jpg">   
+            </a>
+            <div class="title">
+                <div class="narrow">
+                    <a href="#" title="Queen of air and darkness" style="width: 150px">Queen of air and darkness</a>
+                    <p>Cassandra Clare</p>
+                </div>
+            </div>
+         </li>
+
+         <li class="vsep">
+            <a class="cover" href='#'>
+                <img src = "../Pictures/Children/the-crimes-of-grindelwald.jpg">   
+            </a>
+            <div class="title">
+                <div class="narrow">
+                    <a href="#" title="The crimes of grindelwald" style="width: 150px">The crimes of grindelwald</a>
+                    <p>J.K. Rowling</p>
+                </div>
+            </div>
+        </li>
+
+        <li class="vsep">
+            <a class="cover" href='#'>
+                <img src = "../Pictures/Children/the-fourth-closet-five-nights-at-freddy-s.jpg">   
+            </a>
+            <div class="title">
+                <div class="narrow">
+                    <a href="#" title="The fourth closest five nights at freddy's" style="width: 150px">The fourth closest five nights at freddy's</a>
+                    <p>Scott Cawthon</p>
+                </div>
+            </div>
+        </li>
+
+        <li class="vsep">
+            <a class="cover" href='#'>
+                <img src = "../Pictures/Children/the-tales-of-beedle-the-bard.jpg">   
+            </a>
+            <div class="title">
+                <div class="narrow">
+                    <a href="#" title="The tales of beedle the bard" style="width: 150px">The tales of beedle the bard</a>
+                    <p>J.K. Rowling</p>
+                </div>
+            </div>
+        </li>        
+    </ul>
+</div>
+
+
+</div>
+</body>
+</html>
+
     
