Update Description and add search

--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
 <img src ="Pictures/Logo.png"></img>
 </div>
 <div class="search">
-	<form action="main.html/search.php">
+	<form action="search.js">
 		<input type="search" name="search" placeholder="Enter keyword" />
 		<input type ="submit" value="Search" />
 	</form>
