--- a/Products/Adventure.html
+++ b/Products/Adventure.html
@@ -53,7 +53,7 @@
                 </a>
                 <div class="title">
                     <div class="narrow">
-                        <a href="#" title="The Nightingale" style="width: 150px">The Nightinglae</a>
+                        <a href="https://books.google.ro/books?id=0QE3BAAAQBAJ&lpg=PP1&dq=The%20Nightingale%20book%20preview&pg=PP1&output=embed" title="The Nightingale" style="width: 150px">The Nightingale</a>
                         <p>Kristin Hannah</p>
                     </div>
                 </div>
@@ -64,7 +64,7 @@
                     </a>
                     <div class="title">
                         <div class="narrow">
-                            <a href="#" title="Alice's adventure in wonderland" style="width: 150px">Alice's adventure in wonderland</a>
+                            <a href="https://books.google.ro/books?id=FFbCOxkzQ7cC&lpg=PP1&dq=Alice's%20adventure%20in%20wonderland&pg=PP1&output=embed" title="Alice's adventure in wonderland" style="width: 150px">Alice's adventure in wonderland</a>
                             <p>Lewis Carroll</p>                    
                         </div>
                     </div>
@@ -76,7 +76,7 @@
                     </a>
                     <div class="title">
                         <div class="narrow">
-                            <a href="#" title="All quiet on the western front" style="width: 150px">All quiet on the western front</a>
+                            <a href="https://books.google.ro/books?id=pgvqsaYvgacC&lpg=PP1&dq=All%20quiet%20on%20the%20western%20front&pg=PP1&output=embed" title="All quiet on the western front" style="width: 150px">All quiet on the western front</a>
                             <p>Maria Remarque</p>
                         </div>
                     </div>
@@ -88,7 +88,7 @@
                 </a>
                 <div class="title">
                     <div class="narrow">
-                        <a href="#" title="Anne of green gables" style="width: 150px">Anne of green gables</a>
+                        <a href="https://books.google.ro/books?id=DLx5DQAAQBAJ&lpg=PT221&dq=Anne%20of%20green%20gables&pg=PP1&output=embed" title="Anne of green gables" style="width: 150px">Anne of green gables</a>
                         <p>Lucy Maud Montgomery</p>
                     </div>
                 </div>
@@ -100,7 +100,7 @@
                 </a>
                 <div class="title">
                     <div class="narrow">
-                        <a href="#" title="Gulliver's travels" style="width: 150px">Gulliver's travels</a>
+                        <a href="https://books.google.ro/books?id=emISbmWjamwC&lpg=PP1&dq=Gulliver's%20travels&pg=PA1&output=embed" title="Gulliver's travels" style="width: 150px">Gulliver's travels</a>
                         <p>Jonathan Swift</p>
                     </div>
                 </div>
@@ -112,7 +112,7 @@
                 </a>
                 <div class="title">
                     <div class="narrow">
-                        <a href="#" title="Kigdon of copper" style="width: 150px">Kingdon of copper</a>
+                        <a href="https://books.google.ro/books?id=nwFVDwAAQBAJ&lpg=PP1&dq=Kingdom%20of%20copper&pg=PP1&output=embed" title="Kigdon of copper" style="width: 150px">Kingdon of copper</a>
                         <p> S.A. Chakraborty</p>
                     </div>
                 </div>
@@ -124,7 +124,7 @@
                 </a>
                 <div class="title">
                     <div class="narrow">
-                        <a href="#" title="The secret garden" style="width: 150px">The secret garden</a>
+                        <a href="https://books.google.ro/books?id=T3JxuhuhlUwC&lpg=PR24&dq=The%20secret%20garden&pg=PR24&output=embed" title="The secret garden" style="width: 150px">The secret garden</a>
                         <p>Francess Burnett</p>
                     </div>
                 </div>
@@ -136,7 +136,7 @@
                 </a>
                 <div class="title">
                     <div class="narrow">
-                        <a href="#" title="Twelfth night" style="width: 150px">Twelfth night</a>
+                        <a href="https://books.google.ro/books?id=XmBkxTMUvoQC&lpg=PP1&dq=Twelfth%20night&pg=PP1&output=embed" title="Twelfth night" style="width: 150px">Twelfth night</a>
                         <p>William Shakespeare</p>
                     </div>
                 </div>
@@ -148,7 +148,7 @@
                 </a>
                 <div class="title">
                     <div class="narrow">
-                        <a href="#" title="War of the wolf" style="width: 150px">War of the wolf</a>
+                        <a href="https://books.google.ro/books?id=T7VFDwAAQBAJ&lpg=PP1&dq=War%20of%20the%20wolf&pg=PP1&output=embed" title="War of the wolf" style="width: 150px">War of the wolf</a>
                         <p>Bernard Cornwell</p>
                     </div>
                 </div>
@@ -160,7 +160,7 @@
                 </a>
                 <div class="title">
                     <div class="narrow">
-                        <a href="#" title="World without end" style="width: 150px">World without end</a>
+                        <a href="https://books.google.ro/books?id=ZbsPom3FTjUC&lpg=PP1&dq=World%20without%20end&pg=PP1&output=embed" title="World without end" style="width: 150px">World without end</a>
                         <p>Ken Follett</p>
                     </div>
                 </div>
