--- a/Products/Children.html
+++ b/Products/Children.html
@@ -54,7 +54,7 @@
             </a>
             <div class="title">
                 <div class="narrow">
-                    <a href="#" title="Five feet apart" style="width: 150px">Five feet apart</a>
+                    <a href="https://books.google.ro/books?id=b0ZXDwAAQBAJ&lpg=PP1&dq=Five%20feet%20apart&pg=PP1&output=embed" title="Five feet apart" style="width: 150px">Five feet apart</a>
                     <p>Rachael Lippincott</p>
                 </div>
             </div>
@@ -65,7 +65,7 @@
                 </a>
                 <div class="title">
                     <div class="narrow">
-                        <a href="#" title="Gravity falls journal 3" style="width: 150px">Gravity falls journal 3</a>
+                        <a href="https://books.google.ro/books?id=koThnQEACAAJ&dq=Gravity+falls+journal+3+preview+book&hl=en&sa=X&ved=0ahUKEwihuJe53qrhAhWbxcQBHXY9C704ChDoAQgoMAA" title="Gravity falls journal 3" style="width: 150px">Gravity falls journal 3</a>
                         <p>Alex Hirsch</p>                    
                     </div>
                 </div>
@@ -77,7 +77,7 @@
                 </a>
                 <div class="title">
                     <div class="narrow">
-                        <a href="#" title="Harry potter box set the complete collection" style="width: 150px">Harry potter box set the complete collection</a>
+                        <a href="https://books.google.ro/books?id=f280CwAAQBAJ&dq=Harry+potter+box+set+the+complete+collection&hl=en&sa=X&ved=0ahUKEwjG6smT36rhAhVhiIsKHVAdCGcQ6AEIKTAA" title="Harry potter box set the complete collection" style="width: 150px">Harry potter box set the complete collection</a>
                         <p>J.K Rowling</p>
                     </div>
                 </div>
@@ -89,7 +89,7 @@
             </a>
             <div class="title">
                 <div class="narrow">
-                    <a href="#" title="Man's search for meaning " style="width: 150px">Man's search for meaning</a>
+                    <a href="https://books.google.ro/books?id=W3q8R4dRZTwC&lpg=PP1&dq=man's%20search%20for%20meaning&pg=PP1&output=embed" title="Man's search for meaning " style="width: 150px">Man's search for meaning</a>
                     <p>Viktor E. Frankl</p>
                 </div>
             </div>
@@ -101,7 +101,7 @@
             </a>
             <div class="title">
                 <div class="narrow">
-                    <a href="#" title="Queen of air and darkness" style="width: 150px">Queen of air and darkness</a>
+                    <a href="https://books.google.ro/books?id=gALdCwAAQBAJ&lpg=PP1&pg=PP5&output=embed" title="Queen of air and darkness" style="width: 150px">Queen of air and darkness</a>
                     <p>Cassandra Clare</p>
                 </div>
             </div>
@@ -113,7 +113,7 @@
             </a>
             <div class="title">
                 <div class="narrow">
-                    <a href="#" title="The crimes of grindelwald" style="width: 150px">The crimes of grindelwald</a>
+                    <a href="https://books.google.ro/books?id=h1ZSDwAAQBAJ&dq=The+crimes+of+grindelwald&hl=en&sa=X&ved=0ahUKEwinuIiR4KrhAhVO2aYKHZdiBYAQ6AEIKTAA" title="The crimes of grindelwald" style="width: 150px">The crimes of grindelwald</a>
                     <p>J.K. Rowling</p>
                 </div>
             </div>
@@ -125,7 +125,7 @@
             </a>
             <div class="title">
                 <div class="narrow">
-                    <a href="#" title="The fourth closest five nights at freddy's" style="width: 150px">The fourth closest five nights at freddy's</a>
+                    <a href="https://books.google.ro/books?id=NrsIDgAAQBAJ&lpg=PP1&dq=The%20fourth%20closest%20five%20nights%20at%20freddy's&pg=PP1&output=embed" title="The fourth closest five nights at freddy's" style="width: 150px">The fourth closest five nights at freddy's</a>
                     <p>Scott Cawthon</p>
                 </div>
             </div>
@@ -137,7 +137,7 @@
             </a>
             <div class="title">
                 <div class="narrow">
-                    <a href="#" title="The tales of beedle the bard" style="width: 150px">The tales of beedle the bard</a>
+                    <a href="https://books.google.ro/books?id=eNRatAEACAAJ&dq=The+tales+of+beedle+the+bard&hl=en&sa=X&ved=0ahUKEwin5aqb4arhAhVMdJoKHeVNCM4Q6AEIKTAA" title="The tales of beedle the bard" style="width: 150px">The tales of beedle the bard</a>
                     <p>J.K. Rowling</p>
                 </div>
             </div>
