--- a/Products/Fiction.html
+++ b/Products/Fiction.html
@@ -53,7 +53,7 @@
                 </a>
                 <div class="title">
                     <div class="narrow">
-                        <a href="#" title="Bird box" style="width: 150px">Bird box</a>
+                        <a href="https://books.google.ro/books?id=RiSSAgAAQBAJ&lpg=PP1&pg=PT3&output=embed" title="Bird Box" style="width: 150px">Bird Box</a>
                         <p>Josh Malerman</p>
                     </div>
                 </div>
@@ -64,7 +64,7 @@
                     </a>
                     <div class="title">
                         <div class="narrow">
-                            <a href="#" title="Fire and blood" style="width: 150px">Fire and blood`</a>
+                            <a href="https://books.google.ro/books?id=Mj5XDwAAQBAJ&lpg=PP1&dq=Fire%20and%20blood&pg=PP1&output=embed" title="Fire and blood" style="width: 150px">Fire and blood</a>
                             <p>George R.R. Martin</p>                    
                         </div>
                     </div>
@@ -76,7 +76,7 @@
                     </a>
                     <div class="title">
                         <div class="narrow">
-                            <a href="#" title="Hidden bodies" style="width: 150px">Hidden bodies</a>
+                            <a href="https://books.google.ro/books?id=xNXOBwAAQBAJ&lpg=PP1&dq=Hidden%20bodies&pg=PP1&output=embed" title="Hidden bodies" style="width: 150px">Hidden bodies</a>
                             <p>Caroline Kepnes</p>
                         </div>
                     </div>
@@ -88,7 +88,7 @@
                 </a>
                 <div class="title">
                     <div class="narrow">
-                        <a href="#" title="It Film tie in " style="width: 150px">It film tie in</a>
+                        <a href="http://a.co/bePBCj8" title="It Film tie in " style="width: 150px">It film tie in</a>
                         <p>Stephen King</p>
                     </div>
                 </div>
@@ -100,7 +100,7 @@
                 </a>
                 <div class="title">
                     <div class="narrow">
-                        <a href="#" title="King of king-of-scars" style="width: 150px">King of scars</a>
+                        <a href="https://books.google.ro/books?id=TgtVDwAAQBAJ&lpg=PP1&pg=PP1&output=embed" title="King of king-of-scars" style="width: 150px">King of scars</a>
                         <p>Leigh Bardugo</p>
                     </div>
                 </div>
@@ -112,7 +112,7 @@
                 </a>
                 <div class="title">
                     <div class="narrow">
-                        <a href="#" title="Metro 2035" style="width: 150px">Metro 2035</a>
+                        <a href="https://books.google.ro/books?id=k_gqCwAAQBAJ&lpg=PP1&pg=PP1&output=embed" title="Metro 2035" style="width: 150px">Metro 2035</a>
                         <p>Dmitry Glukhovsky</p>
                     </div>
                 </div>
@@ -124,7 +124,7 @@
                 </a>
                 <div class="title">
                     <div class="narrow">
-                        <a href="#" title="Tattooist of Auschwitz" style="width: 150px">Tattooist of Auschwitz</a>
+                        <a href="https://books.google.ro/books?id=A1pBDwAAQBAJ&lpg=PP1&dq=Tattooist%20of%20Auschwitz&pg=PP1&output=embed" title="Tattooist of Auschwitz" style="width: 150px">Tattooist of Auschwitz</a>
                         <p>Heather Morris</p>
                     </div>
                 </div>
@@ -136,7 +136,7 @@
                 </a>
                 <div class="title">
                     <div class="narrow">
-                        <a href="#" title="The hobbit and the lord of the rings deluxe pocket boxed set" style="width: 150px">The hobbit and the lord of the rings deluxe pocket boxed set</a>
+                        <a href="https://www.amazon.co.uk/Hobbit-Lord-Rings-Deluxe-Pocket/dp/0544445783" title="The hobbit and the lord of the rings deluxe pocket boxed set" style="width: 150px">The hobbit and the lord of the rings deluxe pocket boxed set</a>
                         <p>J.R.R. Tolkien</p>
                     </div>
                 </div>
@@ -148,7 +148,7 @@
                 </a>
                 <div class="title">
                     <div class="narrow">
-                        <a href="#" title="You" style="width: 150px">You</a>
+                        <a href="https://libro.eb20.net/Reader/rdr.aspx?b=1634234" title="You" style="width: 150px">You</a>
                         <p>Caroline Kepnes</p>
                     </div>
                 </div>
