--- a/Index.html
+++ b/Index.html
@@ -11,11 +11,11 @@
 <img src ="Pictures/Logo.png"></img>
 </div>
 <div class="search">
-	<form action="search.js">
-		<input type="search" name="search" placeholder="Enter keyword" />
-		<input type ="submit" value="Search" />
-	</form>
-</div>
+		<form action="main.html/search.php">
+			<input type="search" name="search" placeholder="Enter keyword" />
+			<input type ="submit" value="Search" />
+		</form>
+	</div>
 <div id='cssmenu'>
 	<div class="dropdown">
 			<button class='dropbtn'><a href='index.html'>Home</a></button>
@@ -40,6 +40,10 @@
 			<a href="Discounts/Technology.html">Tehnology discount</a>
 		</div>
 	</div>
+	<div class="dropdown">
+		<button class='dropbtn'><a href='search.html'>Search this site</a></button>
+</div>
+<p>This site is intended to give you a quick preview of top selling books at the moment along with good prices and even discounts on partner sites</p>  
 
 </div>
 		
