--- a/Products/Adventure.html
+++ b/Products/Adventure.html
@@ -53,7 +53,8 @@
                 </a>
                 <div class="title">
                     <div class="narrow">
-                        <a href="https://books.google.ro/books?id=0QE3BAAAQBAJ&lpg=PP1&dq=The%20Nightingale%20book%20preview&pg=PP1&output=embed" title="The Nightingale" style="width: 150px">The Nightingale</a>
+                        <a href="https://books.google.ro/books?id=0QE3BAAAQBAJ&lpg=PP1&dq=The%20Nightingale%20book%20preview&pg=PP1&output=embed" title="Preview here" style="width: 150px">Preview here</a>
+                        <a>The Nightingale</a>
                         <p>Kristin Hannah</p>
                     </div>
                 </div>
